# Full_stack_Todo_App_Hackathon

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.local.json
.specify/memory/: constitution.md
backend/: .env.example  CLAUDE.md  FIXES_SUMMARY.md  README.md  auth.py  db.py  main.py  models.py  pyproject.toml  rate_limiter.py  requirements.txt  test_backend_sync.py  todo_app.db
backend/routes/: auth.py  chat.py  tasks.py
backend/secure_todo_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/src/ai/: agent.py  tools.py
backend/src/mcp/: server.py
backend/src/services/: auth.py  conversations.py  rate_limiter.py
backend/tests/: test_chatbot.py  test_main.py
frontend/: .env.local.example  CLAUDE.md  ENDPOINT_FIX.md  FINAL_STATUS.md  README.md  REGISTRATION_TEST.md  SIMPLIFIED_PASSWORD_FIX.md  TEST_INSTRUCTIONS.md  TROUBLESHOOTING.md  VERCEL_DEPLOYMENT.md  VERIFICATION_COMPLETE.md  next.config.js  package-lock.json  package.json  tailwind.config.js  test_backend_connection.sh  tsconfig.tsbuildinfo
frontend/app/: layout.tsx  page.tsx
frontend/hooks/: useAnimation.ts
frontend/lib/: api.ts  auth.ts  useAuth.ts
frontend/styles/: globals.css
frontend/types/: index.ts
history/adr/: 001-backend-architecture-for-secure-multi-user-todo-api.md
specs/: overview.md
specs/001-frontend-auth-todo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-secure-todo-backend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-ai-chatbot-integration/: ai-agent-config.md  data-model.md  (+5 more)
(+60 files in other folders)
