[project]
name = "secure-todo-backend"
version = "1.0.0"
description = "Secure Multi-User Todo Backend API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlmodel==0.0.16",
    "pydantic==2.5.0",
    "python-jose[cryptography]==3.3.0",
    "passlib==1.7.4",
    "python-multipart==0.0.6",
    "psycopg2-binary==2.9.9",
    "python-dotenv==1.0.0",
    "slowapi==0.1.9",
    "cachetools==5.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
]